--- a/font-end/public/index.html
+++ b/font-end/public/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="https://www.pngitem.com/pimgs/m/115-1156076_anime-girls-holding-programming-books-hd-png-download.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <link rel="stylesheet" href="github-markdown.css">
     <meta
       name="description"
       content="Web site created using create-react-app"
