--- a/font-end/public/index.html
+++ b/font-end/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://www.pngitem.com/pimgs/m/115-1156076_anime-girls-holding-programming-books-hd-png-download.png" />
+    <link rel="icon" href="https://anime-girls-holding-programming-books.netlify.app/static/de50ab96ebd3bb4272f73d4d053f50eb/dd8b2/Murakami_Shiina_Holding_Computer_C_Programming_Language.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="stylesheet" href="github-markdown.css">
